--- a/style.css
+++ b/style.css
@@ -20,6 +20,11 @@ header{
         align-items: center;
         padding: 2%;
 
+        & a {
+            text-decoration: none;
+            color: #000;
+        }
+
         & #categorias {
             display: flex;
             list-style: none;
@@ -34,16 +39,40 @@ main{
     margin: auto;
 
     #busqueda{
-        display: grid;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+
+        #contenedor-busqueda{
+           
+            & p {
+                text-align: center;
+                padding-bottom: 10px;
+                font-weight: bolder;
+                font-size: 2rem;
+            }
+        }
+    }
+
+    & #texto-filtro{
+        padding-bottom: 5px;
+        font-weight: bolder;
+        font-size: 1.5rem;
         margin: 2% 2%;
+    }
+
+    #filtrados{
+        display: grid;
         grid-template-columns: repeat(3, 1fr);
+        margin: 2% 2%;
         gap: 10px;
     }
 
     #presentacion{
-        text-align: center;
-        
+        margin: 2% 2%;
         & h1{
+            padding-top: 20px;
             font-weight: bold;
             font-size: 1.5rem;
         }
